--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'androidx.preference:preference:1.1.1'
     implementation project(path: ':core')
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation files('libs\\com.baidu.tts_2.6.2.2.20200629_44818d4.jar')
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
