--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
     <application
         android:usesCleartextTraffic="true"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/my_ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/my_ic_launcher_round"
         android:supportsRtl="true"
@@ -41,19 +41,10 @@
             android:enabled="true"
             android:exported="true" />
 
-        <activity android:name=".MainActivity"
-            android:label="中介"
-            android:launchMode="singleInstance"
-            >
-            <intent-filter>
-                <action android:name="android.intent.action.DEFAULT" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <activity
             android:name=".SettingsActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
